# jupyterlab_henanigans

./: .cruft.json  .devcontainer.json  .env  .gitignore  .prettierignore  LICENSE  MANIFEST.in  README.md  index.css  jupyterlab_henanigans.code-workspace  package-lock.json  package.json  setup.py
.github/workflows/: build.yml
docker/: dev.dockerfile  dev_requirements.txt  docker-compose.yml  henanigans.zsh-theme  prod.dockerfile  prod_requirements.txt
docker/config/: build.yaml  prod.toml  pyproject.toml  zshrc
docker/config/jupyter/: jupyter_lab_config.py
docker/config/jupyter/lab/user-settings/@jupyterlab/apputils-extension/: themes.jupyterlab-settings
docker/jupyter/: jupyter_lab_config.py
docker/jupyter/lab/user-settings/@jupyterlab/apputils-extension/: themes.jupyterlab-settings
docker/scripts/: s_tools.sh  x_tools.sh
extension/: .copier-answers.yml  .gitignore  .prettierignore  LICENSE  MANIFEST.in  README.md  RELEASE.md  install.json  package.json  pyproject.toml  setup.py
extension/.github/workflows/: build.yml  check-release.yml
extension/henanigans/: __init__.py
extension/jupyterlab_henanigans/: __init__.py
extension/src/: index.ts
extension/style/: index.css  theme.css  variables.css
notebooks/: build.ipynb  demo.ipynb
pip/: MANIFEST.in  setup.py  tox.ini
python/: cd devops; git status; cd ..  cli.py
python/jupyterlab_henanigans/: __init__.py
python/jupyterlab_henanigans/core/: __init__.py  tools.py  tools_test.py
sphinx/: conf.py  core.rst  index.rst
src/: index.ts
style/: index.css  style.css  variables.css
