[project]
name = "jupyterlab_henanigans"
version = "0.3.1"
description = "Henanigans theme for Jupyter Lab."
authors = [
    { name = "Alex Braun", email = "alexander.g.braun@gmail.com" },
]
readme = "README.md"
keywords = [
    "jupyter",
    "jupyter-lab",
    "theme",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Framework :: Jupyter",
    "Framework :: Jupyter :: JupyterLab",
    "Framework :: Jupyter :: JupyterLab :: 4",
    "Framework :: Jupyter :: JupyterLab :: Extensions",
    "Framework :: Jupyter :: JupyterLab :: Extensions :: Themes",
    "Framework :: Jupyter :: JupyterLab :: Extensions :: Prebuilt",
]
requires-python = ">=3.10"
dependencies = []

[project.license]
file = "LICENSE"

[project.urls]
repository = "https://github.com/theNewFlesh/jupyterlab_henanigans"
documentation = "https://theNewFlesh.github.io/jupyterlab_henanigans"

[tool.pytest.ini_options]
cache_dir = "/home/ubuntu/.pytest_cache"
filterwarnings = [
    "ignore:The --rsyncdir command line argument",
]
markers = [
    "flaky:Flaky test",
]

[tool.coverage.report]
show_missing = true
omit = [
    "*/__init__.py",
    "*/*_test_base.py",
    "*/*_test.py",
    "*/*_tests.py",
    "*/cli.py",
    "*/command.py",
    "*/mock_*.py",
    "*/conftest.py",
]

[tool.mypy]
cache_dir = "/home/ubuntu/.mypy_cache"
python_version = "3.10"
ignore_missing_imports = true
warn_no_return = false
pretty = true
warn_unused_ignores = true

[tool.pdm.dev-dependencies]
lab = []
dev = [
    "build",
    "copier~=7.2",
    "hatchling>=1.21.1",
    "jinja2-time>=0.2.0",
    "jupyter_packaging",
    "jupyter_server>=1.6",
    "jupyterlab-git",
    "jupyterlab>=4.0.0,<5",
    "pip>=24.0",
    "pydantic<2.0.0",
    "rolling-pin>=0.9.5",
]
test = []

[tool.jupyter-packaging.options]
skip-if-exists = [
    "jupyterlab_henanigans/labextension/static/style.js",
]
ensured-targets = [
    "jupyterlab_henanigans/labextension/static/style.js",
    "jupyterlab_henanigans/labextension/package.json",
]

[tool.jupyter-packaging.builder]
factory = "jupyter_packaging.npm_builder"

[tool.jupyter-packaging.build-args]
build_cmd = "build:prod"
npm = [
    "jlpm",
]

[tool.check-manifest]
ignore = [
    "jupyterlab_henanigans/labextension/**",
    "yarn.lock",
    ".*",
    "package-lock.json",
]

[tool.hatch.version]
source = "nodejs"

[tool.hatch.metadata.hooks.nodejs]
fields = [
    "description",
    "authors",
    "urls",
]

[tool.hatch.build.targets.sdist]
artifacts = [
    "jupyterlab_henanigans/labextension",
]
exclude = [
    ".github",
    "binder",
]

[tool.hatch.build.targets.wheel.shared-data]
"jupyterlab_henanigans/labextension" = "share/jupyter/labextensions/jupyterlab_henanigans"
"install.json" = "share/jupyter/labextensions/jupyterlab_henanigans/install.json"

[tool.hatch.build.hooks.jupyter-builder]
dependencies = [
    "hatch-jupyter-builder>=0.5",
]
build-function = "hatch_jupyter_builder.npm_builder"
ensured-targets = [
    "jupyterlab_henanigans/labextension/package.json",
]
skip-if-exists = [
    "jupyterlab_henanigans/labextension/static/style.js",
]

[tool.hatch.build.hooks.jupyter-builder.build-kwargs]
build_cmd = "build:prod"
npm = [
    "jlpm",
]

[tool.hatch.build.hooks.jupyter-builder.editable-build-kwargs]
build_cmd = "install:extension"
npm = [
    "jlpm",
]
source_dir = "src"
build_dir = "jupyterlab_henanigans/labextension"

[tool.jupyter-releaser.options]
version_cmd = "hatch version"

[tool.jupyter-releaser.hooks]
before-build-npm = [
    "python -m pip install 'jupyterlab>=4.0.0,<5'",
    "jlpm",
    "jlpm build:prod",
]
before-build-python = [
    "jlpm clean:all",
]

[tool.check-wheel-contents]
ignore = [
    "W002",
]

[build-system]
requires = [
    "hatchling>=1.5.0",
    "jupyterlab>=4.0.0,<5",
    "hatch-nodejs-version>=0.3.2",
]
build-backend = "hatchling.build"
